# bluepill-edu

./: .gitignore  .mxproject  .project  BluePill.ioc  CMakeLists.txt  Makefile  README.md  STM32F103C8Tx_FLASH.ld
Core/Inc/: main.h  stm32f1xx_hal_conf.h
Core/Src/: gpio.c  main.c  stm32f1xx_hal_msp.c
app/: application.cpp  application.h
libs/ssd1309/: lcd.cpp  lcd.h
